# orchestration-saga-example

./: CLAUDE.md  Cargo.toml  Dockerfile.inventory-service  Dockerfile.order-service  Dockerfile.payment-service  LICENSE  README.md  compose.yaml  create-topics.sh  init.sql
inventory-service/: Cargo.toml
inventory-service/migrations/2024-01-01-000001_create_tables/: down.sql  up.sql
inventory-service/src/: handlers.rs  main.rs  models.rs  schema.rs
order-service/: Cargo.toml
order-service/migrations/2024-01-01-000001_create_tables/: down.sql  up.sql
order-service/src/: api.rs  handlers.rs  main.rs  models.rs  outbox.rs  schema.rs
payment-service/: Cargo.toml
payment-service/migrations/2024-01-01-000001_create_tables/: down.sql  up.sql
payment-service/src/: handlers.rs  main.rs  models.rs  schema.rs
shared/: Cargo.toml
shared/src/: lib.rs
