[workspace]
resolver = "2"
members = [
    "shared",
    "order-service",
    "payment-service",
    "inventory-service",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "numeric", "serde_json"] }
diesel_migrations = "2.0"
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bb8 = "0.8"
bb8-postgres = "0.8"
rdkafka = "0.34"
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3"
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
