[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bb8 = { workspace = true }
bb8-postgres = { workspace = true }
rdkafka = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }